--- a/students/ruslan/style.css
+++ b/students/ruslan/style.css
@@ -69,3 +69,18 @@ footer {
   font-size: 0.9em;
   color: #666;
 }
+a {
+  display: inline-block;
+  margin-top: 2em;
+  color: #6d4c41;
+  text-decoration: none;
+  border: 1px solid #6d4c41;
+  padding: 0.5em 1em;
+  border-radius: 8px;
+  transition: 0.3s;
+}
+
+a:hover {
+  background-color: #284f83;
+  color: white;
+}
