--- a/styles/main.css
+++ b/styles/main.css
@@ -8,33 +8,47 @@ body {
 
 header, footer {
   text-align: center;
-  padding: 1.5em;
+  padding: 2em 1em;
   background-color: #00796b;
   color: white;
 }
 
 h1 {
   font-size: 2.5em;
+  margin: 0.5em 0;
+}
+
+p {
+  margin: 0.5em 0 2em;
+  font-size: 1.2em;
 }
 
 .student-list {
   list-style: none;
-  padding: 2em;
+  padding: 2em 1em;
+  margin: 0 auto;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   gap: 1.5em;
+  max-width: 1200px;
+}
+
+.student-list li {
+  margin: 0;
 }
 
 .student-list li a {
+  display: block;
   background-color: #ffffff;
-  padding: 1em 2em;
+  padding: 1em 1.5em;
   border-radius: 10px;
   text-decoration: none;
   color: #00796b;
   font-weight: bold;
   border: 2px solid #00796b;
   transition: 0.3s;
+  text-align: center;
 }
 
 .student-list li a:hover {
